syntax = "proto3";

package dankfolio.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nicolas-martin/dankfolio/backend/gen/proto/go/dankfolio/v1;dankfoliov1";

// TradeService provides operations for trading coins on Solana
service TradeService {
  // GetSwapQuote returns a quote for a potential trade
  rpc GetSwapQuote(GetSwapQuoteRequest) returns (GetSwapQuoteResponse);

  // SubmitSwap submits a trade for execution
  rpc SubmitSwap(SubmitSwapRequest) returns (SubmitSwapResponse);

  // GetTrade returns details and status of a specific trade
  rpc GetTrade(GetTradeRequest) returns (Trade);

  // ListTrades returns all trades
  rpc ListTrades(ListTradesRequest) returns (ListTradesResponse);
}

// Trade represents a meme trading transaction
message Trade {
  string id = 1;
  string user_id = 2;
  string from_coin_id = 3;
  string to_coin_id = 4;
  string coin_symbol = 5;
  string type = 6;
  double amount = 7;
  double price = 8;
  double fee = 9;
  string status = 10;
  string transaction_hash = 11;
  google.protobuf.Timestamp created_at = 12;
  optional google.protobuf.Timestamp completed_at = 13;
  int32 confirmations = 14;
  bool finalized = 15;
  optional string error = 16;
}

// GetSwapQuoteRequest is the request for getting a trade quote
message GetSwapQuoteRequest {
  string from_coin_id = 1;
  string to_coin_id = 2;
  string amount = 3;
  string slippage_bps = 4;
}

// GetSwapQuoteResponse is the response containing trade quote details
message GetSwapQuoteResponse {
  string estimated_amount = 1;
  string exchange_rate = 2;
  string fee = 3;
  string price_impact = 4;
  repeated string route_plan = 5;
  string input_mint = 6;
  string output_mint = 7;
}

// SubmitSwapRequest is the request for submitting a trade
message SubmitSwapRequest {
  string from_coin_id = 1;
  string to_coin_id = 2;
  double amount = 3;
  string signed_transaction = 4;
}

// SubmitSwapResponse is the response after submitting a trade
message SubmitSwapResponse {
  string trade_id = 1;
  string transaction_hash = 2;
}

// GetTradeRequest is the request for getting trade details and status
message GetTradeRequest {
  oneof identifier {
    string id = 1;
    string transaction_hash = 2;
  }
}

// ListTradesRequest is the request for listing trades
message ListTradesRequest {
  // Empty for now, could add pagination/filtering later
}

// ListTradesResponse is the response containing a list of trades
message ListTradesResponse {
  repeated Trade trades = 1;
}
